--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,6 @@ certifi==2020.4.5.1
 chardet==3.0.4
 Django==2.0.9
 django-extensions==2.2.9
-django-rest-auth==0.9.5
 django-simple-history==2.10.0
 djangorestframework==3.11.0
 drf-extensions==0.6.0
@@ -21,4 +20,7 @@ sqlparse==0.3.1
 urllib3==1.22
 wrapt==1.11.2
 xmltodict==0.12.0
+django-rest-swagger==2.2.0
 django-allauth
+django-rest-auth==0.9.5
+djangorestframework-jwt==1.11.0
